# PlotJuggler

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  Dockerfile  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  debian.yaml  macos.yaml  pre-commit.yaml  ros2-humble.yaml  ros2-jazzy.yaml  ros2-rolling.yaml  snap_core22.yaml  snap_core24.yaml  ubuntu.yaml  windows.yaml
installer/: config.xml
plotjuggler_app/: CMakeLists.txt  curve_tracker.cpp  curvelist_panel.cpp  curvelist_panel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlohmann_parsers.cpp  nlohmann_parsers.h  plot_docker.cpp  plotwidget.cpp  plotwidget.h  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_editor.ui  plotwidget_transforms.cpp  plotwidget_transforms.ui  plugin_manager.cpp  preferences_dialog.cpp  preferences_dialog.ui  resource.qrc  toast_manager.cpp  toast_manager.h  toast_notification.cpp  toast_notification.h  utils.cpp
plotjuggler_app/resources/: stylesheet_dark.qss  stylesheet_light.qss
plotjuggler_plugins/: CMakeLists.txt
plotjuggler_plugins/DataStreamWebsocketBridge/: .gitignore  CMakeLists.txt  README.md  websocket_client.cpp  websocket_client.h  websocket_client.ui  websocket_client_config.cpp  websocket_client_config.h  websocket_dialog.cpp  websocket_dialog.h
snap_core22/: snapcraft.yaml
snap_core24/: snapcraft.yaml
(+49 files in other folders)
